# nanospheres_geant4_sim

./: .gitignore  README.md
AnalysisScripts/: ChargeStateStudies.ipynb  CompareEnergies.ipynb  ReduceOutput.py
Data/NIST/: NIST_estar_Si.txt  NIST_xcom_Si.txt  StoppingPower.ipynb
Geant4_CCD_simulation/: CMakeLists.txt  main.cc  runMac.mac
Geant4_CCD_simulation/Old/: batch_ion.csv  batch_muon_angles.csv  batch_particles.csv  batch_simulate_CCD.py  batch_tritium.csv  tritium_beta_spectrum.csv
Geant4_CCD_simulation/include/: MyDetectorConstMessenger.hh  MyDetectorConstruction.hh  MyEventAction.hh  MyParticleUserInformation.hh  MyPhysicsList.hh  MyPrimaryGeneratorAction.hh  MyPrimaryGeneratorMessenger.hh  MyRunAction.hh  MyStackingAction.hh  MySteppingAction.hh
Geant4_CCD_simulation/src/: MyDetectorConstMessenger.cc  MyDetectorConstruction.cc  MyEventAction.cc  MyParticleUserInformation.cc  MyPhysicsList.cc  MyPrimaryGeneratorAction.cc  MyPrimaryGeneratorMessenger.cc  MyRunAction.cc  MyStackingAction.cc  MySteppingAction.cc
docker/: docker-compose.yml  dockerfile
